--- a/index.html
+++ b/index.html
@@ -1,5 +1,36 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <title>Document</title>
 </head>
-<body></body>
+<body>
+    <div class="cont">
+        <div class="box">
+        <h2>Verify Your Account</h2>
+        <p>" We emailed you the six digit code to personal@email.com " 
+            <br/>
+            " Enter the code below to confirm your email address "</p>
+        </div>
+        <div class="cont-input">
+            <input class="input" type="number" placeholder="0" min="0" max="9" required>
+            <input class="input" type="number" placeholder="0" min="0" max="9" required>
+            <input class="input" type="number" placeholder="0" min="0" max="9" required>
+            <input class="input" type="number" placeholder="0" min="0" max="9" required>
+            <input class="input" type="number" placeholder="0" min="0" max="9" required>
+            <input class="input" type="number" placeholder="0" min="0" max="9" required>
+        </div>
+        <div>
+            <button type="button" class="btn btn-primary">Verify</button>
+        </div>
+        <small>
+            If you didn't receive a code !! <strong>RESEND</strong>
+        </small>
+    </div>
+    <script src="App.js"></script>
+</body>
+</html>
+
