--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="cont">
         <div class="box">
         <h2>Verify Your Account</h2>
-        <p>" We emailed you the six digit code to personal@email.com " 
+        <p> We emailed you the six digit code to personal@email.com  
             <br/>
-            " Enter the code below to confirm your email address "</p>
+             Enter the code below to confirm your email address </p>
         </div>
         <div class="cont-input">
             <input class="input" type="number" placeholder="0" min="0" max="9" required>
@@ -23,11 +23,11 @@
             <input class="input" type="number" placeholder="0" min="0" max="9" required>
             <input class="input" type="number" placeholder="0" min="0" max="9" required>
         </div>
-        <div>
-            <button type="button" class="btn btn-primary">Verify</button>
-        </div>
+        <!-- <div>
+            <button type="button" class="btn btn-primary">Submit</button>
+        </div> -->
         <small>
-            If you didn't receive a code !! <strong>RESEND</strong>
+            This is design only. We didn't acutually send you an email as we don't have your email.right? 
         </small>
     </div>
     <script src="App.js"></script>
